--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,29 @@
   <!--  Libraries to be included in your system -->
   
   <dependencies>
-  <!-- https://mvnrepository.com/artifact/junit/junit -->
+  
+  <!--  comment out the JUNIT when you add dependencies for testng.-->
+  <!--  https://mvnrepository.com/artifact/junit/junit
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	    <version>4.12</version>
+	</dependency> --> 
+	
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>6.10</version>
 	</dependency>
-  
- </dependencies>
+	
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>2.53.1</version>
+	</dependency>
+</dependencies>
  <build>
   <plugins>
    <!-- Plugin for setting source/target -->
